--- a/public/styles/estilos.css
+++ b/public/styles/estilos.css
@@ -1,3 +1,8 @@
+div.tarjeta{
+    -webkit-box-shadow: 6px 8px 15px 1px #f39e1fe0 !important; 
+    box-shadow: 6px 8px 15px 1px rgb(255 175 75 / 58%) !important;
+
+}
 .fuente{
     font-family: 'Gochi Hand', cursive;
 }
@@ -17,10 +22,6 @@
     background: -ms-linear-gradient(top, rgba(255,146,10,1) 0%, rgba(255,175,75,1) 100%);
     background: linear-gradient(to bottom, rgba(255,146,10,1) 0%, rgba(255,175,75,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff920a', endColorstr='#ffaf4b', GradientType=0 );
-}
-div.tarjeta{
-    -webkit-box-shadow: 6px 8px 15px 1px #000000 !important; 
-    box-shadow: 6px 8px 15px 1px #000000 !important;
 }
 .boton{
     background-color:#07A1E1 !important;
